gobmkida/g3/owl_defend
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/owl_defend/src/engine/owl.c:2269:20: error: use of undeclared identifier 'owl_0'
reduced_init_owl( &owl_0, 1); 
                   ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/owl_defend/src/engine/owl.c:2270:7: error: use of undeclared identifier 'owl_0'
v14 = owl_0; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/owl_defend/src/engine/owl.c:2272:1: error: use of undeclared identifier 'owl_0'
owl_0->lunches_are_current = 0; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/owl_defend/src/engine/owl.c:2293:28: error: use of undeclared identifier 'owl_0'
compute_owl_escape_values( owl_0); 
                           ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/owl_defend/src/engine/owl.c:2294:7: error: use of undeclared identifier 'owl_0'
v15 = owl_0; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/owl_defend/src/engine/owl.c:2296:23: error: use of undeclared identifier 'owl_0'
lunches_are_current = owl_0->lunches_are_current; 
                      ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/owl_defend/src/engine/owl.c:2297:20: error: use of undeclared identifier 'owl_0'
current_owl_data = owl_0; 
                   ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/owl_defend/src/engine/owl.c:2299:19: error: use of undeclared identifier 'owl_0'
owl_find_lunches( owl_0); 
                  ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/owl_defend/src/engine/owl.c:2308:7: error: use of undeclared identifier 'owl_0'
v19 = owl_0; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/owl_defend/src/engine/owl.c:2311:18: error: use of undeclared identifier 'owl_0'
list_goal_worms( owl_0, &my_eye->color); 
                 ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/owl_defend/src/engine/owl.c:2315:7: error: use of undeclared identifier 'owl_0'
v19 = owl_0; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/owl_defend/src/engine/owl.c:2344:83: error: use of undeclared identifier 'owl_0'
store_persistent_owl_cache( 1, v4, 0, 0, result, move, wpos, result_certain, v25, owl_0->goal, board[v4]); 
                                                                                  ^
12 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/owl_defend/src/obj/1/owl.o] Error 1
